--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.5",
+    "lodash.update": "^4.10.2",
+    "react-router-dom": "^4.3.1",
     "style-loader": "^0.18.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -23,9 +25,9 @@
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
-    "node-sass": "^4.5.3",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
+    "node-sass": "^4.9.3",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-router": "^3.0.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
