--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "react-test-create-react-app",
+  "homepage": "https://tenisistaa.github.io/photo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
@@ -10,6 +12,8 @@
     "react-transition-group": "^2.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
