--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.5",
+    "react-swipeable": "^4.3.0",
     "react-transition-group": "^2.4.0",
     "redux": "^4.0.0"
   },
