--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "npm": "^6.4.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-file-viewer": "^0.5.0",
+    "react-pdf": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
