offers kindergarten - add 2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-test-create-react-app",
-  "homepage": "http://kogaza.pl/photo",
+  "name": "Foto_Dawid_Tychy",
+  "homepage": "http://fotodawid.eu",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
